# Impedance_admittance_control_on_heal_franka

./: README.md
addverb_heal_description/: CMakeLists.txt  package.xml
addverb_heal_description/config/: dual_arm.config.rviz  heal_display.config.rviz  hec_dual_arm.config.rviz
addverb_heal_description/launch/: display.launch
addverb_heal_description/mesh/: link_2.STL
addverb_heal_description/test/: cobot.urdf
addverb_heal_description/urdf/: robot.urdf
cobot_ros/: README.md
cobot_ros/addverb_cobot_camera/: camera_pose.launch
cobot_ros/addverb_cobot_control/: CMakeLists.txt  package.xml
cobot_ros/addverb_cobot_controllers/: CMakeLists.txt
cobot_ros/addverb_cobot_msgs/: CMakeLists.txt
cobot_ros/addverb_cobot_ros/: CMakeLists.txt
cobot_ros/addverb_cobot_simulation/: CMakeLists.txt  package.xml
cobot_ros/addverb_heal_data_broadcaster/: CMakeLists.txt  package.xml
cobot_ros/addverb_syncro_description/: CMakeLists.txt  package.xml
cobot_ros/addverb_syncro_description/launch/: display.launch  hand_eye_calib.launch  hand_eye_calib_p2.launch  hand_eye_calib_results.launch  rviz_dual_robot_display.launch
cobot_ros/addverb_syncro_description/mesh/: base_link.STL  link_1.STL  link_2.STL  link_4.STL  link_5.STL
cobot_ros/addverb_syncro_description/scripts/: delayed_launch.py
cobot_ros/addverb_syncro_description/urdf/: robot.urdf
cobot_ros/examples/: CMakeLists.txt
cobot_ros/heal_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
cobot_ros/me299_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
cobot_ros/scripts/: Ik.py  ee_pose.py  effort publisher on heal.py  joint trajectory node.py  sample_command_velocity.py  trial_2.py
cobot_ros/syncro_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ds_control/: CMakeLists.txt  package.xml  setup.py
ds_control/data/: joint_log.csv  joint_log_merged.csv  plot.py  plotV1.py  plot_video.py  test.py  twist_log.csv  twist_log_1.csv  twist_log_video_from_front.csv
ds_control/launch/: bimanual.launch  franka.launch
ds_control/launch/rviz/: bimanual.rviz
ds_control/scripts/: box_pose_reach.py  dual_arm_force_velocity_mapping.py  dual_ds.py  force_vel_mapping.py  franka_force_vel_mapping.py  ft_sensor_publisher_node.py  home_fr3.py  home_heal.py  main.py  plots.py  testV1.py  testV2.py  testV3.py  testV4.py  testV5.py  testV6.py  testV7.py
ds_control/src/ds_control/: dls_velocity.py  ds_coordination.py  ds_orientation.py  ds_position.py  gripper_actions.py  kdl_ik_solver.py  robot_state.py  sync_ds.py  trajectory_planner.py
dynamic_box_lifting/codes_for_plots/: aruco_box_position_plot.py  fft_plots.py  fft_plots_log_scale.py  folder_st.py
dynamic_box_lifting/csv/: aruco_box_positions.csv  fr3_force_log.csv  franka_force_log_hardcoded.csv  franka_wrench_samples.csv  ft_samples.csv  heal_force_log_hardcoded.csv  plot_friction_force.py
dynamic_box_lifting/scripts/: auruco_marker.py  csv_for_offset_removal.py  ee_force.py  force_vel_mapping_both.py  force_vel_mapping_franka.py  force_velocity_dual_robot.py  force_velocity_dual_robot_6_axis.py  force_velocity_dual_robot_throw.py  lift_velocity_command.py  lift_velocity_command_6_axis.py  run_nodes_seq_all5.py
dynamic_box_lifting/utils/: Heal franka force plots.py  auruco_obj_position.py  auruco_obj_velocity.py  controllers.txt  fr3_wrench_filter.py  franka_controller.py  franka_controller_V1.py  franka_controller_throw.py  ft_raw_values.py  generate_auruco_marker.py  heal_controller.py  heal_controller_6_axis.py  wrench.py  (+7 more)
fr3_controllers/: CMakeLists.txt  fr3_controllers_plugin.xml  package.xml
fr3_controllers/config/: fr3_controllers.yaml
fr3_controllers/dynamic_box_lifting/data_for_ee_force/utils/: aruco_box_positions.csv
fr3_controllers/include/fr3_controllers/: cartesian_impedance_controller.h  cartesian_pose_controller.h  dob.h  eoi_controller.h  joint_impedance_controller.h  joint_position_controller.h  joint_velocity_controller.h  pseudo_inversion.h  robot_motion.h  variable_impedance_controller.h
fr3_controllers/launch/: cartesian_impedance_controller.launch  cartesian_pose_controller.launch  dob.launch  dynamic_box_lifting.launch  eoi_controller.launch  eoi_trials.launch  joint_impedance_controller.launch  joint_velocity_controller.launch  vic.launch
fr3_controllers/scripts/: data_collection.py  data_collection_old.py  ee_pose.py  ee_value.py  trial_manager copy.py  trial_manager.py  trial_manager_old.py  trial_manager_v2.py
fr3_controllers/src/: cartesian_impedance_controller.cpp  cartesian_pose_controller.cpp  dob.cpp  eoi_controller.cpp  joint_impedance_controller.cpp  joint_position_controller.cpp  joint_velocity_controller.cpp  robot_motion.cpp  variable_impedance_controller.cpp
snap_detector/: CMakeLists.txt  package.xml  setup.py  typescript
test/: CMakeLists.txt  package.xml
(+145 files in other folders)
